samples/_failures_safe/1761786709_d244f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee3aa5e0.c: In function ‘main’:
./samples/SAFE/__tmp_ee3aa5e0.c:136: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ee3aa5e0.c:135:5: error: expected declaration or statement at end of input
  135 |     while
      |     ^~~~~
